style.css
/*
	Tedx Bahcesehir
	Main stylesheet
	style.css
	Developer: Mert Akengin
	Date: 3 Feb 2016
*/

* { transition:0.3s; }
HTML {
	background-color:firebrick;
	content:attr(data-msg);
	text-align:center;
	color:white;
	margin:0;
}
BODY {
	font-family:'open sans',sans-serif;
	font-weight:lighter;
	color:#222;
	margin:0;
	opacity:0;
	padding:0;
	text-align:center;
	_animation: starter 3s ease-in-out 1s 1 normal;
}

#about [data-hint]:after {
	width:110% !important;
	white-space:normal !important;
	line-height:1.3em !important;
	background:firebrick !important;
	font-size:0.9em !important;
	font-weight:200;
	border-radius:10px !important;
	top:67%;
}
#about [data-hint]:before { border-bottom-color:firebrick !important; }

.center { text-align:center; }
.left { text-align:left; }
.right { text-align:right; }
.fixed { position:fixed; }
.cover { background-size:cover !important; }
.contain { background-size:contain !important; }
.block { display:block; }

[left] { float:left; }
[right] { float:right; }
[clear] { clear:both; }
[bgfix] { background-attachment:fixed; }
.img {
	background-color:transparent;
	background-position:center;
	background-size:auto;
	background-clip:border-box;
	background-attachment:local;
	background-repeat:no-repeat;
}

.section {
	min-height:100%;
	min-height:100vh;
	padding:100px 5%;
	box-sizing:border-box;
}

.logo {
	display:inline-block;
	width:20%;
	height:100%;
	font-size:0;
}

.links {
	font-size:1.5em;
	display:inline-block;
	box-sizing:border-box;
	height:100%;
	vertical-align:middle;
	position:relative;
	color:#ccc;
}
.links A, .links .dd {
	display:inline-block;
	text-decoration:none;
	color:inherit;
	padding:21px 20px;
	height:100%;
	box-sizing:border-box;
	position:relative;
}
.links A:hover { color:white; background-color:firebrick; }
.sm A {
	width:48px;
	background-clip:content-box;
	padding:18px 2px;
	font-size:0;
	border-radius:50%;
	background-size:contain;
	position:relative;
	margin:0 8px;
}
.sm A:hover { -webkit-filter:sepia(1); }
/* #intro A.hint:hover { -webkit-filter:invert(1); background-color:black; } */

.navbar {
	top:0;
	left:0;
	right:0;
	height:80px;
	background-color:rgba(0,0,0,0.8);
	padding:0 5%;
	z-index:5;
	box-sizing:border-box;
	text-align: right;
}
.navbar .links.right { font-size:0; }

#intro {
	color:white;
	font-size:80px;
	padding-top:32vh;
	padding-bottom:3vh;
	text-shadow:-1px -1px 1px black;
}
#intro A.hint {
	font-size:20px;
	height:auto;
	vertical-align:bottom;
	padding:4px;
	padding-top:64px;
	background-position:top;
	position:absolute;
	bottom:6%;
	left:10%;
	right:10%;
	box-sizing:border-box;
	border-radius:12px;
}
A.hint { text-decoration:none; color:inherit; }

#about {
	font-weight:600;
	font-size:1.33em;
	padding:120px 10%;
}

.sep {
	width:100%;
	height:64px;
	margin:10px 0;
}

#gallery IFRAME {
	width:32vw;
	height:24vw;
	padding:2vw;
}

#contact {
	background-color:#F2F2F2;
	color:#222;
	font-size:1.3em;
}
#contact P { text-align:left; text-shadow:-1px -1px 1px black; }
#contact A { color:inherit; font-style:italic; }
#contact IFRAME {
	width:60%;
	height:100%;
	padding:0 5% 0 1%;
	height:75vh;
	height:calc(100vh - 160px);
}

.ppl .person {
	width:24vw;
	height:30vh;
	margin:5px;
}
.ppl .person .tint {
	opacity:0;
	background-color:rgba(0,0,0,0.8);
	color:white;
	font-weight:200;
	width:100%;
	height:100%;
	vertical-align:middle;
	/*
	padding:5%;
	padding-top:10%;
	*/
	box-sizing:border-box;
	display:block;
}
.ppl .person .tint .cont {
	display:block;
	position:relative;
	top:50%;
	transform:translateY(-50%);
	z-index:-1;
}
.ppl .person:hover > .tint { opacity:1; }
.ppl .person:hover > .tint .cont { z-index:1; }
.ppl .person .tint A {
	width:48px;
	height:48px;
	background-color:transparent;
	background-position:center;
	background-size:contain;
	background-clip:border-box;
	background-attachment:local;
	background-repeat:no-repeat;
	display:inline-block;
	margin:10px 5px;
}
.ppl .person .tint A:hover { -webkit-filter:sepia(1); }

.sub {
	width:100%;
	display:none;
	position:absolute;
	background-color:rgba(0,0,0,0.8);
	box-shadow:0px 8px 16px 0px rgba(255,255,255,0.2);
	padding:0;
	z-index:1;
	margin:-54px -20px;
}
.sub A { width:100%; height:80px; }
.dd:hover .sub { display:block; }
.sponsors { display:inline-block !important; text-align:center; width:80%; padding:15px; background-color:firebrick; border-radius:8px; }
.sponsors .sponsor {
	font-size:0;
	background-color:firebrick;
	width:23vw;
	height:25vh;
}

@media (min-width: 960px) {
	.static { background-attachment:fixed !important; }
	#contact P { float:right; }
	#map { float:left; }
	#about [data-hint]:after { width:180% !important; }
	.main { padding-right:23px; }
}
@media (max-width: 960px) {
	.static { background-attachment:local !important; }
	#contact IFRAME { width:100%; height:40vh; margin:0; padding:0; }
	.logo { display:none; }
	#gallery IFRAME { width:100%; height:40vh; margin:5px auto; padding:0; }
	.ppl .person { width:100%; height:45vh; margin:5px auto; }
	.navbar { padding:0; width:100%; text-align:center; }

	#intro { font-size:72px; padding-top:23vh; }
	.sm { position:fixed; _top:calc(100% - 80px); bottom:0; background-color:rgba(0,0,0,0.8); height:80px; left:0; right:0; text-align:center; }
	#intro A.hint { bottom:10%; }
	#contact P { text-align:center; width:100%; }
	#contact { text-align:center; }
}
load {
	background:url('img/load.gif');
	background-repeat:no-repeat;
	background-size:contain;
	background-color:white;
	position:fixed;
	top:0;
	left:0;
	right:0;
	bottom:0;
	z-index:99;
}
@keyframes starter {
	from { -webkit-filter:grayscale(1) blur(0.2em); }
	to { -webkit-filter:grayscale(0) blur(0); }
}

@keyframes lite {
	from { -webkit-filter:grayscale(1); }
	to { -webkit-filter:grayscale(0); }
}

